Make config available in all WorldObjects to resolve MaterialRefs